fix(*): A few small bug fixes, immediate refres on renderer process crash
Summary:
fix(drafts): One failed promsie breaks ChangeSet.commit forever

Move the quoted text button so it's beneath the quoted text not at the bottom of the composer, also fixes problem with it overlapping content slightly

When the main window crashes, reload it immediately

Test Plan: Run tests

Reviewers: evan

Reviewed By: evan

Differential Revision: https://phab.nylas.com/D1742

--- a/internal_packages/composer/stylesheets/composer.less
+++ b/internal_packages/composer/stylesheets/composer.less
@@ -150,10 +150,8 @@
     margin: 0 8px;
 
     .quoted-text-control {
-      position: absolute;
-      bottom: 10px;
-      left: 15px;
-      margin: 0;
+      margin: @spacing-standard;
+      margin-top:0;
     }
 
     div[contenteditable] {
@@ -166,7 +164,6 @@
       margin-bottom: 30px;
     }
     .contenteditable-container {
-      display: flex;
       width: 100%;
       position: relative;
     }
